# fuge

./: .gitignore  CLAUDE.md  README.md  emri.py  pyproject.toml  spectral.py
_graveyard/: chirp_demo.py  fisher_demo.py  transformer_demo.py
docs/: PLAN.md  PLAN_EX.md  PLAN_ROOT.md  spectral_math.md
examples/: chirp.py  chirp_demo.py  emri_demo.py  fisher_demo.py  merger_reconstruction_demo.py  multiresolution_demo.py  psd_whitening_demo.py  spectral_demo.py  svd_demo.py  token_continuity_demo.py  token_reconstruction_demo.py  transformer_demo.py  voice_demo.py
notebooks/: emri_demo.py  merger_reconstruction_demo.py  multiresolution_demo.py  score_demo.py  spectral_demo.py  synthetic_data.py  token_continuity_demo.py  token_reconstruction_demo.py  voice_demo.py
src/fuge/: __init__.py  embedding.py  nn.py  spectral.py  svd.py
src/fuge/spectral/: __init__.py  core.py  embedding.py  legato.py  tokens.py  voice.py
src/fuge/svd/: __init__.py  core.py
src/spectral_tokens/: __init__.py  emri.py
