[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "fuge"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "jax",
    "jaxlib",
    "numpy",
    "matplotlib",
    "scipy",
]

[tool.setuptools.packages.find]
where = ["src"]
